{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "e80d03cd-1a00-4418-a200-f7e25a9b63de",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "43d9acca-73fe-4f3a-82d4-49510631637a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateShip",
                    "type": "Button",
                    "id": "8647dcc3-69b5-4d0d-87f8-d1e36ebb2730",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "4075bdcd-04ca-41c0-b18a-3bf7198b92b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "723ad0ef-4400-4463-8cde-64339b9bc044",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f3ed2ea-ba69-4423-b52e-afda196a31f2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d65d5a7-78bd-4d79-8e99-459d0fb66d93",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85ad95d2-6e85-4707-b153-2498391cfb3a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80e8073d-ed17-4e67-b2f4-75c257187912",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}